<!--
  ~     This project is one of projects of ArvinSiChuan.com.
  ~     Copyright (C) 2017, ArvinSiChuan.com <https://arvinsichuan.com>.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Old Car Market</string>
    <string name="testSession">TEST</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_main_content">MainContentActivity</string>
    <string name="title_activity_selling_car_list">SellingCarListActivity</string>

    <!--label text-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="car_trip">Car Trip</string>
    <string name="car_price">Car Price</string>
    <string name="car_year">Car Year</string>
    <string name="colon">:</string>
    <string name="money_RMB">¥</string>

    <!-- placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cars_in_sales">Cars In Sales</string>
    <string name="shopping_chart">Shopping Chart</string>
    <string name="users_self">Me</string>
    <string name="cancel">Cancel</string>
    <string name="password_again">Password Again</string>
    <string name="change_password">Change Password</string>
    <string name="backup_car_img">Backup Car Img</string>

    <!--Tips Text-->
    <string name="network_error">Can not connect to server, please check your internet connection.</string>
    <string name="sign_up_failed">Sign Up Failed,please check your internet connection and try again.</string>
    <string name="user_already_signed_up">User Already signed up, please try another username or just go signing in.
    </string>

    <string name="add_successful">Add To Chart Successful.</string>
    <string name="add_failed">Add To Chart Failed.</string>
    <string name="remove_successful">Remove Successful.</string>
    <string name="remove_failed">Remove Failed.</string>

    <!--Auto Generated Text-->
    <string name="no_data">No data available now.</string>
    <string name="details">Details…</string>
    <string name="buy">Buy</string>
    <string name="add_to_chart">Add to chart</string>
    <string name="go_back">Go back</string>
    <string name="car_desc">Car Description</string>
    <string name="title">Title</string>
    <string name="submit_order">Submit Order</string>


</resources>
