<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     This project is one of projects of ArvinSiChuan.com.
  ~     Copyright (C) 2017, ArvinSiChuan.com <https://arvinsichuan.com>.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_selling_car_lsit"
            android:icon="@drawable/ic_selling_car_list"
            android:title="@string/cars_in_sales"/>

    <item
            android:id="@+id/navigation_shopping_chart"
            android:icon="@drawable/ic_shopping_chart"
            android:title="@string/shopping_chart"/>

    <item
            android:id="@+id/navigation_userself"
            android:icon="@drawable/ic_userself"
            android:title="@string/users_self"/>

</menu>
