<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     This project is one of projects of ArvinSiChuan.com.
  ~     Copyright (C) 2017, ArvinSiChuan.com <https://arvinsichuan.com>.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.arvinsichuan.twentyseventeen.oldcarsalesys.mobile.account.userprofile.UserProfileFragment"
                                             android:id="@+id/fragment_user_profile">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_userprofile_username"
            android:hint="@string/username"
            app:layout_constraintLeft_toRightOf="@+id/textView"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="@+id/textView"
            android:layout_marginTop="0dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_userprofile_change_password"
            android:text="@string/change_password"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_profile_passAgain"
            app:layout_constraintLeft_toLeftOf="@+id/textView_label_passAgain"/>
    <TextView
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginStart="80dp" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"  />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_profile_password"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView_label_password"
            app:layout_constraintLeft_toLeftOf="@+id/textView_label_password"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_profile_passAgain"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView_label_passAgain" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_label_passAgain"/>
    <TextView
            android:text="@string/password"
            android:labelFor="@+id/editText_profile_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_label_password"
            android:layout_marginStart="0dp" app:layout_constraintLeft_toLeftOf="@+id/textView"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/password_again"
            android:labelFor="@+id/editText_profile_passAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_label_passAgain"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_profile_password" android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView_label_password"/>
</android.support.constraint.ConstraintLayout>
