<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     This project is one of projects of ArvinSiChuan.com.
  ~     Copyright (C) 2017, ArvinSiChuan.com <https://arvinsichuan.com>.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.arvinsichuan.twentyseventeen.oldcarsalesys.mobile.account.signin.activities.LoginActivity">


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_loginUsername" android:layout_marginLeft="85dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="85dp"
            app:layout_constraintRight_toRightOf="parent" android:hint="@string/username"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="96dp"
            app:layout_constraintHorizontal_bias="0.503"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_loginPassword" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_loginUsername" android:layout_marginLeft="85dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="85dp"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="0.503"
            android:hint="@string/password"/>
    <Button
            android:text="@string/sing_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_signin" android:layout_marginTop="29dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_loginPassword" android:layout_marginLeft="90dp"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_signup" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_loginPassword" android:layout_marginRight="90dp"
            app:layout_constraintRight_toRightOf="parent"
    />
</android.support.constraint.ConstraintLayout>